// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build two accounts with common owner and transfers 1`] = `
[
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account1",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "checking",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": undefined,
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 1,
      "year": 2020,
    },
    "name": "test-account1",
    "outFlows": 0,
    "startBalance": Balance {
      "amount": 30,
      "date": 2020-02-01T00:00:00.000Z,
      "type": "PROJECTED",
    },
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account1",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "checking",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": Balance {
      "amount": 30,
      "date": 2020-02-01T00:00:00.000Z,
      "type": "PROJECTED",
    },
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 0,
      "year": 2020,
    },
    "name": "test-account1",
    "outFlows": 0,
    "startBalance": Balance {
      "amount": 20,
      "date": 2020-01-01T00:00:00.000Z,
      "type": "CONFIRMED",
    },
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account1",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "checking",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": Balance {
      "amount": 20,
      "date": 2020-01-01T00:00:00.000Z,
      "type": "CONFIRMED",
    },
    "hasProjectedTransfer": true,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 11,
      "year": 2019,
    },
    "name": "test-account1",
    "outFlows": -3000,
    "startBalance": Balance {
      "amount": 10,
      "date": 2019-12-01T00:00:00.000Z,
      "type": "CONFIRMED",
    },
    "totalPayments": 0,
    "totalTransfers": -3000,
    "transactions": [
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account2",
          "number": undefined,
          "openedOn": undefined,
          "owners": [
            "john",
          ],
          "password": undefined,
          "phone": undefined,
          "type": "credit",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": -2000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "balanceFromStart": -2990,
        "description": "First transfer",
        "type": 1,
      },
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account2",
          "number": undefined,
          "openedOn": undefined,
          "owners": [
            "john",
          ],
          "password": undefined,
          "phone": undefined,
          "type": "credit",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": -1000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "balanceFromStart": -990,
        "description": "Second transfer",
        "type": 1,
      },
    ],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account2",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "credit",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": undefined,
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 1,
      "year": 2020,
    },
    "name": "test-account2",
    "outFlows": 0,
    "startBalance": undefined,
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account2",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "credit",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": undefined,
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 0,
      "year": 2020,
    },
    "name": "test-account2",
    "outFlows": 0,
    "startBalance": undefined,
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account2",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "credit",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": true,
    "endBalance": undefined,
    "hasProjectedTransfer": true,
    "inFlows": 3000,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 11,
      "year": 2019,
    },
    "name": "test-account2",
    "outFlows": 0,
    "startBalance": undefined,
    "totalPayments": 0,
    "totalTransfers": 3000,
    "transactions": [
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account1",
          "number": undefined,
          "openedOn": undefined,
          "owners": [
            "john",
          ],
          "password": undefined,
          "phone": undefined,
          "type": "checking",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": 2000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "description": "First transfer",
        "type": 1,
      },
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account1",
          "number": undefined,
          "openedOn": undefined,
          "owners": [
            "john",
          ],
          "password": undefined,
          "phone": undefined,
          "type": "checking",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": 1000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "description": "Second transfer",
        "type": 1,
      },
    ],
  },
]
`;

exports[`Build two accounts with extenal transfer 1`] = `
[
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account1",
      "number": undefined,
      "openedOn": undefined,
      "owners": [],
      "password": undefined,
      "phone": undefined,
      "type": "external",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": undefined,
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 1,
      "year": 2020,
    },
    "name": "test-account1",
    "outFlows": 0,
    "startBalance": Balance {
      "amount": 30,
      "date": 2020-02-01T00:00:00.000Z,
      "type": "PROJECTED",
    },
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account1",
      "number": undefined,
      "openedOn": undefined,
      "owners": [],
      "password": undefined,
      "phone": undefined,
      "type": "external",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": Balance {
      "amount": 30,
      "date": 2020-02-01T00:00:00.000Z,
      "type": "PROJECTED",
    },
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 0,
      "year": 2020,
    },
    "name": "test-account1",
    "outFlows": 0,
    "startBalance": Balance {
      "amount": 20,
      "date": 2020-01-01T00:00:00.000Z,
      "type": "CONFIRMED",
    },
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account1",
      "number": undefined,
      "openedOn": undefined,
      "owners": [],
      "password": undefined,
      "phone": undefined,
      "type": "external",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": Balance {
      "amount": 20,
      "date": 2020-01-01T00:00:00.000Z,
      "type": "CONFIRMED",
    },
    "hasProjectedTransfer": true,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 11,
      "year": 2019,
    },
    "name": "test-account1",
    "outFlows": -3000,
    "startBalance": Balance {
      "amount": 10,
      "date": 2019-12-01T00:00:00.000Z,
      "type": "CONFIRMED",
    },
    "totalPayments": -3000,
    "totalTransfers": 0,
    "transactions": [
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account2",
          "number": undefined,
          "openedOn": undefined,
          "owners": [
            "john",
          ],
          "password": undefined,
          "phone": undefined,
          "type": "credit",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": -2000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "balanceFromStart": -2990,
        "description": "First transfer",
        "type": 3,
      },
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account2",
          "number": undefined,
          "openedOn": undefined,
          "owners": [
            "john",
          ],
          "password": undefined,
          "phone": undefined,
          "type": "credit",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": -1000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "balanceFromStart": -990,
        "description": "Second transfer",
        "type": 3,
      },
    ],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account2",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "credit",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": undefined,
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 1,
      "year": 2020,
    },
    "name": "test-account2",
    "outFlows": 0,
    "startBalance": undefined,
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account2",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "credit",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": undefined,
    "hasProjectedTransfer": false,
    "inFlows": 0,
    "income": 0,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 0,
      "year": 2020,
    },
    "name": "test-account2",
    "outFlows": 0,
    "startBalance": undefined,
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [],
  },
  TransactionStatement {
    "account": Account {
      "address": undefined,
      "closedOn": undefined,
      "description": undefined,
      "name": "test-account2",
      "number": undefined,
      "openedOn": undefined,
      "owners": [
        "john",
      ],
      "password": undefined,
      "phone": undefined,
      "type": "credit",
      "url": undefined,
      "userName": undefined,
    },
    "coversPrevious": false,
    "coversProjectedPrevious": false,
    "endBalance": undefined,
    "hasProjectedTransfer": true,
    "inFlows": 3000,
    "income": 3000,
    "isCovered": true,
    "isProjectedCovered": true,
    "month": Month {
      "month": 11,
      "year": 2019,
    },
    "name": "test-account2",
    "outFlows": 0,
    "startBalance": undefined,
    "totalPayments": 0,
    "totalTransfers": 0,
    "transactions": [
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account1",
          "number": undefined,
          "openedOn": undefined,
          "owners": [],
          "password": undefined,
          "phone": undefined,
          "type": "external",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": 2000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "description": "First transfer",
        "type": 2,
      },
      {
        "account": Account {
          "address": undefined,
          "closedOn": undefined,
          "description": undefined,
          "name": "test-account1",
          "number": undefined,
          "openedOn": undefined,
          "owners": [],
          "password": undefined,
          "phone": undefined,
          "type": "external",
          "url": undefined,
          "userName": undefined,
        },
        "balance": Balance {
          "amount": 1000,
          "date": 2019-12-05T00:00:00.000Z,
          "type": "PROJECTED",
        },
        "description": "Second transfer",
        "type": 2,
      },
    ],
  },
]
`;
